# Preporation-for-EGE

./: pyproject.toml  Игра камень, ножницы, бумага.py
kompege.ru/Пробник 09-2022/: 15 (4675).py  16 (4736).py  17 (4597).py  2 (4607).py  23 (4681).py  5 (4935).py  8 (4613).py
kompege.ru/Пробник 1-2023/: 12 (5947).py  14 (5953).py  15 (4986).py  16 (5954).py  17 (2491).py  2 (4582).py  5 (1804).py  8 (1241).py  9 (5946).xlsx
kompege.ru/Пробник 11-2022/: 12 (5219).py  15 (4987).py  16 (5167).py  17 (4367).py  19 (4379).py  2 (4662).py  23 (4626).py  5 (4665).py  8 (5218).py
